# workflowui

./: .editorconfig  .gitignore  LICENSE  README.md  README.zh-CN.md  package-lock.json  run.sh  setup.sh  test_integration.mjs  test_script.js
.github/workflows/: ci.yml
backend/: .clang-format  CMakeLists.txt
backend/cmake/toolchains/: aarch64-linux.cmake  x86_64-windows-mingw.cmake
backend/src/: main.cpp
backend/src/capability/: registry.cpp  registry.h
backend/src/model/: node.cpp  node.h  workflow_graph.cpp  workflow_graph.h
backend/src/server/: rpc_errors.h  rpc_handler.cpp  rpc_handler.h  security_config.cpp  security_config.h  ws_server.cpp  ws_server.h
backend/src/workflow/: debug_controller.cpp  debug_controller.h  executor.cpp  executor.h  node_error.h  run_session.cpp  run_session.h  scheduler.cpp  scheduler.h
backend/src/workflow/handlers/: condition_expr.cpp  condition_expr.h  core_handlers.cpp  core_handlers.h  image_tensor.h  node_handler.h
backend/tests/: main_test.cpp  mock_engine.h  test_condition.cpp  test_debug_controller.cpp  test_executor.cpp  test_model_inspect_rpc.cpp  test_model_inspector_ir.cpp  test_ncnn_inspector.cpp  test_rpc_handler.cpp  test_run_session.cpp  test_security_config.cpp
demo/NCNN_demo/: README.md  demo_shufflenet_empty.json  image_classification.json  workflow.json
demo/image_processing/: README.md  mobilenetv2.param  workflow.json
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: image-classification-demo.spec.ts  mock-backend.mjs  ncnn-demo.spec.ts  properties-panel-image-preview.spec.ts  workflow.spec.ts
frontend/src/: App.css  App.test.ts  App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs
frontend/src/components/: ImagePreview.tsx  LabeledHandle.tsx  ModelInspectorDrawer.test.tsx  ModelInspectorDrawer.tsx  NodeContextMenu.test.tsx  NodeContextMenu.tsx  ReconnectBanner.tsx  Resizer.tsx  ThemeSwitcher.tsx  ToastContainer.test.tsx  ToastContainer.tsx  useImagePreview.ts
frontend/src/engine/: WorkflowRunner.test.ts  WorkflowRunner.ts
frontend/src/hooks/: useKeyboardShortcuts.ts  useModelInspect.test.ts  useModelInspect.ts  useResizable.ts  useTheme.ts  useWorkflowActions.test.ts  useWorkflowActions.ts
frontend/src/nodes/: AnnotateImageNode.tsx  BenchmarkNode.tsx  CompositeNode.tsx  ConditionNode.tsx  CreateNetNode.tsx  DebugNode.tsx  DrawBoxesNode.tsx  InferenceNode.tsx  InputImageNode.tsx  InputTensorNode.tsx  NodeIcons.tsx  OutputNode.tsx  PostprocessNode.test.tsx  PostprocessNode.tsx  SaveImageNode.tsx  SaveTextNode.tsx  SegmentationMaskNode.tsx  TensorToImageNode.tsx  configSchemas.test.ts  configSchemas.ts  index.ts  manifest.ts  manifest.tsx  portSchema.test.ts  portSchema.ts
frontend/src/panels/: ConsolePanel.test.tsx  ConsolePanel.tsx  DebugPanel.tsx  NodePalette.test.tsx  NodePalette.tsx  PropertiesPanel.test.tsx  PropertiesPanel.tsx  PropertiesPanel.vendor.test.tsx  PropertiesPanel.viewModel.test.tsx  Toolbar.tsx
frontend/src/store/: debugStore.test.ts  debugStore.ts  toastStore.test.ts  toastStore.ts  workflowStore.test.ts  workflowStore.ts
frontend/src/transport/: WsClient.test.ts  WsClient.ts
frontend/src/types/: modelInspector.ts
frontend/src/utils/: cycles.test.ts  cycles.ts  filePicker.ts  layout.test.ts  layout.ts  logger.ts  nodeClassName.ts
memories/repo/: architecture-audit-2026-04.md  audit-pass-2026-04-25.md  build-workflow.md  code-conventions.md  feature-gap-audit-2026-04.md  review-findings.md  review-pass-2026-04.md  wire-protocol.md
scripts/: check_backend_capabilities.mjs  convert_mobilenet_ncnn.py  verify_image_workflow.mjs
